force-app/main/default/objects/PKB_Article_Feedback_Deflection__c.object
<CustomObject>
    <fields>
        <fullName>Article_Author__c</fullName>
        <description>The user that created the article.</description>
        <label>Article Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_ID__c</fullName>
        <description>[imported] - ID of the article</description>
        <label>Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <description>[imported] - Autopopulated</description>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <description>[imported] - Autopopulated</description>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>[imported] -  Channel on which the record has been created. Value can be Web or Mobile.  Examples include: web, mobile</description>
        <inlineHelpText>Channel on which the record has been created.</inlineHelpText>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>web</fullName>
                    <default>true</default>
                    <label>web</label>
                </value>
                <value>
                    <fullName>mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>[imported] - Depends on type of article</description>
        <label>Comments</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[imported] - Relationship to contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PKB Article Feedback</relationshipLabel>
        <relationshipName>PKB_Article_Deflection</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deflection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Salesforce] - Indicates whether user thought the article was helpful (checked) or not.</description>
        <inlineHelpText>Indicates whether user thought the article was helpful (checked) or not.</inlineHelpText>
        <label>Helpful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <description>[imported] - Examples include: ContactUs, Search, RelatedArticle</description>
        <label>Feedback Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ContactUs</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>RelatedArticle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <description>The functional group of the article.</description>
        <label>Functional Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keyword_Searched__c</fullName>
        <description>[Salesforce] - Keyword searched, if any, prior to the user entering this feedback or deflection.</description>
        <inlineHelpText>Keyword searched, if any, prior to the user entering this feedback or deflection.</inlineHelpText>
        <label>Keyword Searched</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <description>[imported] - Web session ID</description>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The Article Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Stores data about feedback provided to an article and any customer deflection the article may have contributed to.</description>
    <label>PKB Article Feedback</label>
    <nameField>
        <displayFormat>AFD-{0000000}</displayFormat>
        <label>PKB Article Feedback &amp; Deflection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKB Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Deflection__c</columns>
        <columns>Feedback_Source__c</columns>
        <columns>Keyword_Searched__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>