force-app/main/default/objects/PKB_Article_Feedback_Deflection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Article_Number__c</columns>
    <columns>Article_Title__c</columns>
    <columns>Comments__c</columns>
    <columns>Deflection__c</columns>
    <columns>Feedback_Source__c</columns>
    <columns>Keyword_Searched__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>